sas-core/main/default/objects/OldCaseTagtoNewCaseTags__c/OldCaseTagtoNewCaseTags__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is creating mainly for migrating the old case tags to new case tags</description>
    <label>OldCaseTagtoNewCaseTags</label>
</CustomObject>