sas-core/main/default/objects/OldCaseTagtoNewCaseTags__c/fields/New_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Case_Type__c</fullName>
    <label>New Case Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>