sas-core/main/default/objects/OldCaseTagtoNewCaseTags__c/fields/Old_Case_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Old_Case_Sub_Reason__c</fullName>
    <label>Old Case Sub Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>